Fixed black bar above keyboard on iPhone 7 On certain occasions this was happening on all iOS phones, but it no longer shows up in the simulators, or on my iPhone 7plus.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,19 +2,23 @@
 
 html {
   box-sizing: border-box;
-  height: 100%;
 }
 
 body {
   background-color: $app-background-color;
-  height: 100%;
 }
 
 .app-wrapper {
+  height: 100%;
   min-height: 100%;
   position: relative;
   @include breakpoints($max-page-container-width) {
     margin: $space-none $space-auto;
+  }
+  &__cordova {
+    position: relative;
+    height: unset;
+    min-height: unset;
   }
 }
 
@@ -48,28 +52,28 @@ body {
 .headroom-webapp--secondary       { margin-top: 11vh; }
 .headroom-webapp--backto          { margin-top: -3vh; }
 .headroom-webapp--full            { margin-top: -1vh; }
-.headroom-ios--notch--secondary   { margin-top: 10vh; }
+.headroom-ios--notch--secondary   { margin-top: -2vh; }
 .headroom-ios--notch--backto      { margin-top: 8vh; }
 .headroom-ios--notch--full        { margin-top: -2vh; }
-.headroom-ios--678--secondary     { margin-top: 10vh; }
+.headroom-ios--678--secondary     { margin-top: -5vh; }
 .headroom-ios--678--backto        { margin-top: -1vh; }
 .headroom-ios--678--full          { margin-top: -5vh; }
-.headroom-ios--678plus--secondary { margin-top: 10vh; }
-.headroom-ios--678plus--backto    { margin-top: 6vh; }
+.headroom-ios--678plus--secondary { margin-top: -5vh; }
+.headroom-ios--678plus--backto    { margin-top: 0vh; }
 .headroom-ios--678plus--full      { margin-top: -4vh; }
-.headroom-ios--ipad--secondary    { margin-top: 7vh; }
+.headroom-ios--ipad--secondary    { margin-top: -3vh; }
 .headroom-ios--ipad--backto       { margin-top: 3vh; }
-.headroom-ios--ipad--full         { margin-top: 1vh; }
-.headroom-android--xl--secondary  { margin-top: 7vh; }
+.headroom-ios--ipad--full         { margin-top: -4vh; }
+.headroom-android--xl--secondary  { margin-top: -7vh; }
 .headroom-android--xl--backto     { margin-top: -3vh; }
 .headroom-android--xl--full       { margin-top: -8vh; }
-.headroom-android--lg--secondary  { margin-top: 8vh; }
+.headroom-android--lg--secondary  { margin-top: -8vh; }
 .headroom-android--lg--backto     { margin-top: -3vh; }
 .headroom-android--lg--full       { margin-top: -8vh; }
-.headroom-android--md--secondary  { margin-top: 8vh; }
+.headroom-android--md--secondary  { margin-top: -8vh; }
 .headroom-android--md--backto     { margin-top: -3vh; }
 .headroom-android--md--full       { margin-top: -8vh; }
-.headroom-android--sm--secondary  { margin-top: 10vh; }
+.headroom-android--sm--secondary  { margin-top: -10vh; }
 .headroom-android--sm--backto     { margin-top: -5vh; }
 .headroom-android--sm--full       { margin-top: -10vh; }
 // stylelint-enable sh-waqar/declaration-use-variable
